<resources>
    <string name="app_name">PowerHouse</string>
    <string-array name="phone_prefixes">
        <item>+33</item> <!-- France -->
        <item>+32</item> <!-- Belgique -->
        <item>+1</item>  <!-- USA/Canada -->
        <item>+237</item> <!-- Cameroun -->
        <item>+225</item> <!-- Côte d'Ivoire -->
    </string-array>
    <string name="motdepasse">Password</string>
    <string name="mail">Email</string>
    <string name="prenom">Surname</string>
    <string name="numero">Number</string>
    <string name="nomdefamille">Name</string>
    <string name="creer">Create</string>
    <string name="connectezvous">Login</string>
    <string name="identifiezvous">Identify Yourself</string>
    <string name="mdpoublie">FORGOT YOUR PASSWORD ?</string>
    <string name="connecfb">Login with Facebook</string>
    <string name="ou">OR</string>
    <string name="nvsurjumia">New on Jumia ?</string>
    <string name="creeruncompte">CREATE AN ACCOUNT</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_apropos">About</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="consommation_globale">Consommation globale</string>
    <string name="vos_appareils">Vos appareils</string>
    <string name="consommation_400w">Consommation : 400W</string>
    <string name="nom_appareil">Nom appareil</string>
    <string name="afficher_la_consommation_globale_de_la_r_sidence">Afficher la consommation globale de la résidence</string>
    <string name="afficher_vos_appareils_l_ctrom_nagers">Afficher vos appareils éléctroménagers</string>
    <string name="supprimer">Supprimer</string>
    <string name="appareils_disponibles">Appareils disponibles</string>
    <string name="ajouter">Ajouter</string>
    <string name="menu_habitat">habitat</string>
    <string name="r_server">Réserver</string>
</resources>