<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/vert"
            android:paddingBottom="20dp"
            android:paddingTop="15dp"
            android:layout_marginBottom="25dp">

            <ImageButton
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:background="@drawable/baseline_arrow_back_24"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/connectezvous"
                android:textColor="@color/white"
                android:layout_marginStart="-39dp"
                android:textAlignment="center"
                android:textSize="60px" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identifiezvous"
            android:paddingStart="20dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_email_24"
                android:layout_marginStart="15dp"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/mail"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_block_24"
                android:layout_marginStart="15dp"/>

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/motdepasse"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/mdpoublie"
            android:layout_marginStart="220dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="20dp"
            android:textColor="#0000FF"/>

        <Button
            android:clickable="true"
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bouton_rec"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/connectezvous"
            android:textColor="#FFFFFF"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nvsurjumia"
                android:layout_marginRight="30dp"/>

            <TextView
                android:id="@+id/intent_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creeruncompte"
                android:textColor="#0000FF"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginStart="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ou"
                android:paddingHorizontal="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginEnd="15dp"/>
        </LinearLayout>

        <!-- Lien Facebook cliquable -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecfb"
            android:textColor="#0000FF"
            android:textStyle="bold"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
</ScrollView>
