<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <!-- En-tête -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/baseline_arrow_back_24"
        android:gravity="center"
        android:text="@string/connectezvous"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingRight="400dp"/>

    <!-- Contenu principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- Colonne gauche -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Section Identifiez-vous -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifiezvous"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#A9A9A9"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <!-- Champ Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_email_24"
                    android:contentDescription="Email Icon" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/mail"
                    android:paddingLeft="8dp"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <!-- Champ Mot de passe -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_block_24"
                    android:contentDescription="Password Icon"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/motdepasse"
                    android:paddingLeft="8dp"
                    android:inputType="textPassword" />
            </LinearLayout>

            <!-- Lien Mot de passe oublié -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mdpoublie"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp" />

            <!-- Bouton Connexion -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connectezvous"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bouton_rec"/>

        </LinearLayout>

        <!-- Ligne de séparation verticale avec "OU" -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="16dp">

            <View
                android:layout_marginTop="10dp"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ou"

                android:padding="8dp"
                android:gravity="center" />

            <View
                android:layout_marginBottom="10dp"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/black" />

        </LinearLayout>

        <!-- Colonne droite -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Texte Nouveau sur Jumia -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nvsurjumia"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="100dp"
                />

            <!-- Lien Créer un compte -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creeruncompte"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true" />

            <!-- Bouton Facebook -->
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_alternate_email_24"

                    android:contentDescription="Facebook Icon"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connecfb" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>