<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="32dp"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingVertical="32dp">

            <LinearLayout
                android:id="@+id/buttonShowConsoGlobale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consommation_globale"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgShowConsoGlobale"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_arrow_drop_up_24"
                    android:contentDescription="@string/afficher_la_consommation_globale_de_la_r_sidence" />
            </LinearLayout>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />

            <ListView
                android:id="@+id/timeslot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/buttonShowAppliances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vos_appareils"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgShowAppliances"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_arrow_drop_up_24"
                    android:contentDescription="@string/afficher_vos_appareils_l_ctrom_nagers" />
            </LinearLayout>

            <ListView
                android:id="@+id/list_appliance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />
            <LinearLayout
                android:id="@+id/buttonShowFreeAppliances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appareils_disponibles"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgShowFreeAppliances"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_arrow_drop_up_24"
                    android:importantForAccessibility="no" />
            </LinearLayout>

            <ListView
                android:id="@+id/list_free_appliances"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>