<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".InscriptionsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Créer un compte"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="0.1"
        android:background="@color/black"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/baseline_arrow_back_24"


        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Créer un nouveau compte"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_group_24"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="-10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.1" />

    </LinearLayout>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomdefamille"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="-10dp"
            android:src="@drawable/baseline_email_24" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_block_24"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="-10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/motdepasse"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="0.1" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_contact_phone_24"
            android:layout_marginRight="5dp"/>

        <Spinner
            android:id="@+id/spinner_prefix"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/editText_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero"
            android:inputType="phone"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/bouton_rec"
        android:text="@string/creer"

        android:textColor="@color/white"
        android:layout_weight="0"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

</LinearLayout>